--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -122,10 +122,10 @@ form[action$="destroy"] button {
 }
 
 #sidebar h1 {
-  font-size: 1rem;
-  font-weight: 500;
+  font-size: 1.5rem;
+  font-weight: 700;
   display: flex;
-  align-items: center;
+  align-items: start;
   margin: 0;
   padding: 1rem 2rem;
   border-top: 1px solid #e3e3e3;
@@ -147,6 +147,7 @@ form[action$="destroy"] button {
   padding-bottom: 1rem;
   border-bottom: 1px solid #e3e3e3;
 }
+
 
 #sidebar > div form {
   position: relative;
@@ -186,9 +187,7 @@ form[action$="destroy"] button {
 }
 
 #sidebar nav {
-  flex: 1;
-  overflow: auto;
-  padding-top: 1rem;
+  padding-top: 0rem;
 }
 
 #sidebar nav a span {
@@ -216,6 +215,20 @@ i {
   margin: 0.25rem 0;
 }
 
+#sidebar form {
+  margin-top: 1rem;
+  margin-bottom: 1rem;
+}
+
+#sidebar h2{
+  font-size: 1.2rem;
+  font-weight: 500;
+  margin-top: 1rem;
+  margin-bottom: 1rem;
+  align-items: center;
+  display: flex;
+}
+
 #sidebar nav a {
   display: flex;
   align-items: center;
@@ -223,7 +236,7 @@ i {
   overflow: hidden;
 
   white-space: pre;
-  padding: 0.5rem;
+  padding: 0.3rem 1.5rem;
   border-radius: 8px;
   color: inherit;
   text-decoration: none;
